# Coursework_5

./: .coverage  .dockerignore  .env_template  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
crswrk_5/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
